--- a/html/blog.html
+++ b/html/blog.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../blog.css">
     <title>Blog</title>
 </head>
+
 <body>
     <header class="header">
         <div class="logo">
@@ -24,12 +29,12 @@
             </ul>
         </nav>
     </header>
-    
+
     <section class="blog-secao1">
         <div class="blog-container1">
             <h1>Mais conteúdo <br>para você</h1>
             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-               sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
         </div>
         <div class="blog-container2">
             <img class="blog-foto1" src="../img/9image.svg" alt="Descrição da imagem" srcset="">
@@ -40,16 +45,18 @@
         <div class="blog-cont1">
             <img class="blog-foto-card1" src="../img/img-finance4.jpg" alt="Descrição da imagem do card">
             <h2 class="blog-title1">On the other hand, we denounce</h2>
-            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
-                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men
+                who
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so
                 blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
         </div>
 
         <div class="blog-cont1">
             <img class="blog-foto-card1" src="../img/img-finance5.jpg" alt="Descrição da imagem do card">
             <h2 class="blog-title1">On the other hand, we denounce</h2>
-            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
-                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men
+                who
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so
                 blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
         </div>
     </section>
@@ -58,16 +65,18 @@
         <div class="blog-cont1">
             <img class="blog-foto-card1" src="../img/img-finance6.jpg" alt="Descrição da imagem do card">
             <h2 class="blog-title1">On the other hand, we denounce</h2>
-            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
-                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men
+                who
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so
                 blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
         </div>
 
         <div class="blog-cont1">
             <img class="blog-foto-card1" src="../img/img-finance7.jpg" alt="Descrição da imagem do card">
             <h2 class="blog-title1">On the other hand, we denounce</h2>
-            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
-                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men
+                who
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so
                 blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
         </div>
     </section>
@@ -76,16 +85,18 @@
         <div class="blog-cont1">
             <img class="blog-foto-card1" src="../img/img-finance8.jpg" alt="Descrição da imagem do card">
             <h2 class="blog-title1">On the other hand, we denounce</h2>
-            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
-                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men
+                who
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so
                 blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
         </div>
 
         <div class="blog-cont1">
             <img class="blog-foto-card1" src="../img/img-finance9.jpg" alt="Descrição da imagem do card">
             <h2 class="blog-title1">On the other hand, we denounce</h2>
-            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
-                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men
+                who
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so
                 blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
         </div>
     </section>
@@ -100,10 +111,11 @@
         <br>
         <br>
     </section>
-    
+
     <footer class="footer">
         <div class="container3">
-            <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem" srcset=""></a>
+            <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem"
+                    srcset=""></a>
             <div class="container4">
                 <p class="dindin">dindin</p>
                 <p class="edu-finan">educação financeira</p>
@@ -124,4 +136,5 @@
         </div>
     </footer>
 </body>
+
 </html>
