--- a/html/cursos.html
+++ b/html/cursos.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../cursos.css">
     <title>cursos</title>
 </head>
+
 <body>
     <header class="header">
         <div class="logo">
@@ -39,7 +44,7 @@
                     doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                     veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
                     ipsam voluptatem quia voluptas sit aspernatur aut odit aut</p>
-                <a class="curso-text5" href="#">Começar agora</a>
+                <button class="curso-text5">Começar agora</button>
             </div>
         </div>
 
@@ -50,12 +55,12 @@
         <div class="curso-img02">
             <img src="../img/3image.svg" alt="foto curdo 1">
             <div class="curso-container02">
-                <p class="curso-text04">Investimento para iniciantes</p>
+                <p class="curso-text04">Poupando e Rendendo</p>
                 <p class="curso-text05">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                     doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                     veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
                     ipsam voluptatem quia voluptas sit aspernatur aut odit aut</p>
-                <a class="curso-text06" href="#">Começar agora</a>
+                <button class="curso-text06" href="#">Começar agora</button>
             </div>
         </div>
 
@@ -66,20 +71,20 @@
         <div class="curso-img003">
             <img src="../img/4image.svg" alt="foto curdo 1">
             <div class="curso-container004">
-                <p class="curso-text005">Investimento para iniciantes</p>
+                <p class="curso-text005">Independencia financeira</p>
                 <p class="curso-text006">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                     doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                     veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
                     ipsam voluptatem quia voluptas sit aspernatur aut odit aut</p>
-                <a class="curso-text007" href="#">Começar agora</a>
+                <button class="curso-text007" href="#">Começar agora</button>
             </div>
         </div>
-
     </div>
 
     <footer class="footer">
         <div class="container3">
-            <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem" srcset=""></a>
+            <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem"
+                    srcset=""></a>
             <div class="container4">
                 <p class="dindin">dindin</p>
                 <p class="edu-finan">educação financeira</p>
@@ -99,6 +104,57 @@
             <a class="text13" aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</a>
         </div>
     </footer>
+
+
+    <div id="modal5" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2 class="modal-title1">Investimento para iniciantes</h2>
+            <p class="modal-p1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+                sit aspernatur aut odit aut</p>
+
+            <div class="modal-container1">
+                <img class="modal-img" src="../img/img-finance2.jpg" alt="foto financeiro">
+                <a href="../html/curso-01.html"><button class="modal-comecar">Click para começar</button></a>
+            </div>
+        </div>
+    </div>
+
+    <div id="modal06" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2 class="modal-title2">Poupando e Rendendo</h2>
+            <p class="modal-p1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+                sit aspernatur aut odit aut</p>
+
+            <div class="modal-container1">
+                <img class="modal-img" src="../img/img-finance3.jpg" alt="foto financeiro">
+                <a href="../html/curso-02.html"><button class="modal-comecar">Click para começar</button></a>
+            </div>
+        </div>
+    </div>
+
+    <div id="modal007" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2 class="modal-title3">Independencia financeira</h2>
+            <p class="modal-p1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+                sit aspernatur aut odit aut</p>
+
+            <div class="modal-container1">
+                <img class="modal-img" src="../img/img-finance4.jpg" alt="foto financeiro">
+                <a href="../html/curso-03.html"><button class="modal-comecar">Click para começar</button></a>
+            </div>
+        </div>
+    </div>
+
     <script src="../modal.js"></script>
 </body>
+
 </html>
