--- a/html/post.html
+++ b/html/post.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../post.css">
     <title>post</title>
@@ -54,15 +57,20 @@
 
         <section>
             <div class="post-container3">
-                <p class="post-p1">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and
-                    demoralized by the charms <br> of pleasure of the moment, so blinded by desire, that they cannot foresee
-                    the pain and trouble that are bound to ensue; and <br> equal blame belongs to those who fail in their
+                <p class="post-p1">On the other hand, we denounce with righteous indignation and dislike men who are so
+                    beguiled and
+                    demoralized by the charms <br> of pleasure of the moment, so blinded by desire, that they cannot
+                    foresee
+                    the pain and trouble that are bound to ensue; and <br> equal blame belongs to those who fail in
+                    their
                     duty through weakness of will, which is the same as saying through shrinking from <br>
                     toil and pain. <br>
                     <br>
                     These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice
-                    is untrammelled and when <br> nothing prevents our being able to do what we like best, every pleasure is
-                    to be welcomed and every pain avoided. But in certain <br> circumstances and owing to the claims of duty
+                    is untrammelled and when <br> nothing prevents our being able to do what we like best, every
+                    pleasure is
+                    to be welcomed and every pain avoided. But in certain <br> circumstances and owing to the claims of
+                    duty
                     or the obligations of business it will frequently occur that pleasures have to be <br>
                     repudiated and <br>
                     <br>
@@ -154,7 +162,7 @@
             </div>
         </section>
 
-        
+
 
 
     </main>
