--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Projeto dindin</title>
 </head>
+
 <body>
     <!--
     Dentro da tag <header>, há um logotipo e um menu de navegação que 
@@ -41,7 +46,7 @@
             <div class="container1">
                 <h1>Educação Financeira <br> é tudo de bom</h1>
                 <p>Vem comigo que te mostro <br> por onde começar</p>
-                <a class="button2" aria-label="Button A" aria-labelledby="button-label">
+                <a href="./html/cursos.html" class="button2" aria-label="Button A" aria-labelledby="button-label">
                     quero saber mais
                 </a>
             </div>
@@ -56,8 +61,9 @@
                 <h2 class="title1">Investimentos para iniciantes</h2>
                 <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat
                     nulla pariatur.</p>
-                <a href="./html/curso-01.html"><button class="btn1" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button></a>
-                
+                <a href="./html/curso-01.html"><button class="btn1" aria-label="Botão do card"
+                        aria-labelledby="button-label">Começar Agora</button></a>
+
             </div>
 
             <div class="cont2">
@@ -65,7 +71,8 @@
                 <p class="title2">Poupando e rendendo</p>
                 <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat
                     nulla pariatur.</p>
-                <a href="./html/curso-02.html"><button class="btn2" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button></a>
+                <a href="./html/curso-02.html"><button class="btn2" aria-label="Botão do card"
+                        aria-labelledby="button-label">Começar Agora</button></a>
             </div>
 
             <div class="cont3">
@@ -73,7 +80,8 @@
                 <p class="title3">Independencia financeira</p>
                 <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat
                     nulla pariatur.</p>
-                <a href="./html/curso-03.html"><button class="btn3" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button></a>
+                <a href="./html/curso-03.html"><button class="btn3" aria-label="Botão do card"
+                        aria-labelledby="button-label">Começar Agora</button></a>
             </div>
         </section>
 
@@ -173,7 +181,8 @@
 
     <footer class="footer">
         <div class="container3">
-            <a href="./index.html"><img class="img-1" src="img/dindin-logo-white.svg" alt="Descrição da imagem" srcset=""></a>
+            <a href="./index.html"><img class="img-1" src="img/dindin-logo-white.svg" alt="Descrição da imagem"
+                    srcset=""></a>
             <div class="container4">
                 <p class="dindin">dindin</p>
                 <p class="edu-finan">educação financeira</p>
@@ -194,4 +203,5 @@
         </div>
     </footer>
 </body>
+
 </html>
