--- a/html/contato.html
+++ b/html/contato.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../contatos.css">
     <title>Document</title>
@@ -38,7 +41,7 @@
             <div class="container-area">
                 <textarea cols="30" rows="10" placeholder="mensagem"></textarea><br>
             </div>
-                
+
 
             <button class="contato-btn">entrar</button>
         </div>
