--- a/html/curso-03.html
+++ b/html/curso-03.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../curso-01.css">
     <title>Document</title>
@@ -52,8 +55,8 @@
                         aut odit aut fugit, sed quia consequuntur <br> magni dolores eos qui ratione
                         voluptatem sequi <br> nesciunt. <br>
                         <br>
-                        <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit <br> aut fugit, sed quia
-                            consequuntur magni dolores eos qui <br> ratione voluptatem sequi nesciunt. </p>
+                    <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit <br> aut fugit, sed quia
+                        consequuntur magni dolores eos qui <br> ratione voluptatem sequi nesciunt. </p>
                     </p>
                 </div>
             </div>
@@ -68,8 +71,8 @@
                         aut odit aut fugit, sed quia consequuntur <br> magni dolores eos qui ratione
                         voluptatem sequi <br> nesciunt. <br>
                         <br>
-                        <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit <br> aut fugit, sed quia
-                            consequuntur magni dolores eos qui <br> ratione voluptatem sequi nesciunt. </p>
+                    <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit <br> aut fugit, sed quia
+                        consequuntur magni dolores eos qui <br> ratione voluptatem sequi nesciunt. </p>
                     </p>
                 </div>
             </div>
@@ -84,8 +87,8 @@
                         aut odit aut fugit, sed quia consequuntur <br> magni dolores eos qui ratione
                         voluptatem sequi <br> nesciunt. <br>
                         <br>
-                        <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit <br> aut fugit, sed quia
-                            consequuntur magni dolores eos qui <br> ratione voluptatem sequi nesciunt. </p>
+                    <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit <br> aut fugit, sed quia
+                        consequuntur magni dolores eos qui <br> ratione voluptatem sequi nesciunt. </p>
                     </p>
                 </div>
             </div>
