finalizando projeto by washiner

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </a>
             </div>
             <div class="container2">
-                <img class="" src="img/1image.svg" alt="Descrição da imagem" srcset="">
+                <img class="foto-index" src="img/1image.svg" alt="Descrição da imagem" srcset="">
             </div>
         </section>
 
