--- a/html/post.html
+++ b/html/post.html
@@ -131,18 +131,13 @@
             </div>
         </section>
 
-
-
-
-
-
         <section class="secao2">
             <div class="cont1">
                 <img src="../img/2image.svg" alt="Descrição da imagem do card">
                 <h2 class="title1">Investimentos para iniciantes</h2>
                 <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat
                     nulla pariatur.</p>
-                <button class="btn1" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button>
+                <a href="../html/curso-01.html"><button class="btn1" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button></a>
             </div>
 
             <div class="cont2">
@@ -150,7 +145,7 @@
                 <p class="title2">Poupando e rendendo</p>
                 <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat
                     nulla pariatur.</p>
-                <button class="btn2" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button>
+                <a href="../html/curso-02.html"><button class="btn2" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button></a>
             </div>
 
             <div class="cont3">
@@ -158,7 +153,7 @@
                 <p class="title3">Independencia financeira</p>
                 <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat
                     nulla pariatur.</p>
-                <button class="btn3" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button>
+                <a href="../html/curso-03.html"><button class="btn3" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button></a>
             </div>
         </section>
 
